# python-intermediate-inflammation

./: .gitignore  .pylintrc  404.html  CITATION.cff  LICENCE.md  index.html  inflammation-analysis.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: main.yml
API/: index.html
docs/: API.md  index.md
inflammation/: compute_data.py  models.py
search/: search_index.json
tests/: test_compute_data.py  test_models.py
